Fixed UI alignment

--- a/public/css/styleFilters.css
+++ b/public/css/styleFilters.css
@@ -421,13 +421,13 @@ a:not([href]):not([tabindex]){
 }
 
 #semi-circle{
-  /*background: #9e978e;*/
+  background: yellow;
   display: inline-block;
   width: 150px;
   height: 60px;
   border-radius: 50% / 100%;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
   border-bottom: 3px solid yellow;
 }
 
